--- a/theme/classicMod.html
+++ b/theme/classicMod.html
@@ -610,7 +610,7 @@
         document.getElementsByTagName('head')[0].appendChild(script);
     }
     function addVideos(videos) {
-        let host = 'https://cdn.staticfile.org';
+        let host = 'https://cdnjs.cloudflare.com/ajax/libs/';
         let unloadedResourceCount = 4;
         let callback = (() => {
             return () => {
