--- a/theme/classicMod.html
+++ b/theme/classicMod.html
@@ -610,7 +610,7 @@
         document.getElementsByTagName('head')[0].appendChild(script);
     }
     function addVideos(videos) {
-        let host = 'https://cdnjs.cloudflare.com/ajax/libs/';
+        let host = 'https://s0.pstatp.com/cdn/expire-1-M';
         let unloadedResourceCount = 4;
         let callback = (() => {
             return () => {
@@ -621,12 +621,12 @@
         })(unloadedResourceCount, videos);
         loadResources(
             'link',
-            host + '/dplayer/1.9.1/DPlayer.min.css',
+            host + '/dplayer/1.25.0/DPlayer.min.css',
             callback
         );
         loadResources(
             'script',
-            host + '/dplayer/1.9.1/DPlayer.min.js',
+            'https://cdn.staticfile.org/dplayer/1.26.0/DPlayer.min.js',
             callback
         );
         loadResources(
