--- a/theme/classicMod.html
+++ b/theme/classicMod.html
@@ -484,11 +484,11 @@
 </body>
 
 <!--MdRequireStart--><link rel="stylesheet" href="https://unpkg.com/github-markdown-css@3.0.1/github-markdown.css">
-<script type="text/javascript" src="https://unpkg.com/marked@0.6.2/lib/marked.js"></script><!--MdRequireEnd-->
+<script type="text/javascript" src="?jsFile=marked.js"></script><!--MdRequireEnd-->
 <!--ListStart-->
-<!--GuestUploadStart--><script type="text/javascript" src="//cdn.bootcss.com/spark-md5/3.0.0/spark-md5.min.js"></script><!--GuestUploadEnd-->
+<!--GuestUploadStart--><script type="text/javascript" src="?jsFile=spark-md5.min.js"></script><!--GuestUploadEnd-->
 <!--AliyundriveUploadJsStart--><script src="https://unpkg.com/bignumber.js@9.0.2/bignumber.js"></script>
-<script src="https://www.unpkg.com/js-sha1@0.6.0/src/sha1.js"></script><!--AliyundriveUploadJsEnd-->
+<script src="?jsFile=sha1.min.js"></script><!--AliyundriveUploadJsEnd-->
 <!--IsFileStart--><!--IspdfFileStart--><script src="https://unpkg.com/pdfjs-dist@2.4.456/build/pdf.min.js"></script><!--IspdfFileEnd--><!--IsFileEnd-->
 <!--ListEnd-->
 <script type="text/javascript">
@@ -626,7 +626,7 @@
         );
         loadResources(
             'script',
-            'https://cdn.staticfile.org/dplayer/1.26.0/DPlayer.min.js',
+            'https://cdn.staticfile.org/dplayer/1.27.0/DPlayer.min.js',
             callback
         );
         loadResources(
@@ -655,7 +655,6 @@
     addVideos(["<!--FileEncodeUrl-->"]);
 <!--IsvideoFileEnd-->
 <!--IspdfFileStart-->
-    //cdn.bootcss.com/pdf.js/2.4.456/pdf.worker.min.js
     pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://unpkg.com/pdfjs-dist@2.4.456/build/pdf.worker.min.js';
     var loadingTask = pdfjsLib.getDocument({
         url: "<!--FileDownUrl-->",
@@ -665,6 +664,21 @@
         disableAutoFetch: true,
         rangeChunkSize: 65535
     });
+    /*loadingTask.onProgress = (e) => {
+        //console.log(e);
+        var p = document.getElementById('p');
+        if (p==null) {
+            p = document.createElement('div');
+            p.id = 'p';
+            p.setAttribute('onclick', "this.style.display = 'none';");
+            p.style = 'left: 10px; top: 30%; position: fixed;';
+            document.body.appendChild(p);
+        }
+        p.innerHTML = 'Loaded: ' + ((e.loaded/e.total)*100).toFixed(2) + '%<br>(' + size_format(e.loaded) + ' / ' + size_format(e.total) + ')';
+        p.style.display = '';
+        if (e.loaded==e.total) p.style.display = 'none';
+        
+    }*/
     loadingTask.promise.then(function(pdf) {
         var pagenum =  pdf.numPages;
         var pdfContainer = document.getElementById('pdf-d');
@@ -678,7 +692,6 @@
         pdfContainer.appendChild(pdfnextpagebutton);
         var pdfWaitNextPage = setInterval(function(){
             //console.log(document.documentElement.scrollTop + ", " + document.body.scrollHeight);
-            console.log("next page: " + pagepos + " / " + pagenum);
             if (pdfnextpagebutton.style.display=='none') {
                 for (var i=pagepos;i<=(pagepos+4<pagenum?pagepos+4:pagenum);i++) {
                     var canvasNew = document.createElement('canvas');
@@ -712,6 +725,24 @@
             };
             page.render(renderContext);
         });
+    }
+    function size_format(num) {
+        if (num>1024) {
+            num=num/1024;
+        } else {
+            return num.toFixed(2) + ' B';
+        }
+        if (num>1024) {
+            num=num/1024;
+        } else {
+            return num.toFixed(2) + ' KB';
+        }
+        if (num>1024) {
+            num=num/1024;
+        } else {
+            return num.toFixed(2) + ' MB';
+        }
+        return num.toFixed(2) + ' GB';
     }
 <!--IspdfFileEnd-->
 <!--IsFileEnd-->
